Fix responsiveness on small screens

--- a/style.css
+++ b/style.css
@@ -437,7 +437,7 @@ button.white {
 
 #newsletter {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
   align-items: center;
   background-image: url('img/banner/b14.png');
@@ -683,7 +683,63 @@ footer .copyright {
 }
 
 @media (max-width: 477px) {
+  .section-p1 {
+    padding: 20px;
+  }
+
   #header {
-    padding: 20px 80px;
+    padding: 10px 30px;
+  }
+
+  #hero {
+    padding: 0 20px;
+    background-position: 55%;
+  }
+
+  h2 {
+    font-size: 1.7rem;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  #feature .fe-box {
+    width: 155px;
+    margin: 0 0 15px 0;
+  }
+
+  #feature {
+    justify-content: space-between;
+  }
+
+  #product1 .pro {
+    width: 100%;
+  }
+
+  #banner {
+    height: 40vh;
+  }
+
+  #sm-banner .banner-box {
+    height: 40vh;
+  }
+
+  #sm-banner .banner-box2 {
+    margin-top: 15px;
+  }
+
+  #banner3 {
+    padding: 0 20px;
+  }
+
+  #banner3 .banner-box {
+    width: 100%;
+    text-align: start;
+  }
+
+  #newsletter .form {
+    width: 100%;
+    padding: 20px 0;
   }
 }
